CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(tuto)

# Settings
set(CMAKE_CXX_STANDARD 11)  # Peut être 11, 14, 17, 20, etc.
set(CMAKE_CXX_STANDARD_REQUIRED True)

# Files
FILE(GLOB_RECURSE ENGINE_SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
FILE(GLOB_RECURSE ENGINE_HEADER ${CMAKE_SOURCE_DIR}/header/*.hpp ${CMAKE_SOURCE_DIR}/header/*.h)

ADD_EXECUTABLE(tuto ${ENGINE_SOURCES} ${ENGINE_HEADER})


target_include_directories(tuto PRIVATE ${CMAKE_SOURCE_DIR}/header)
